[package]
name = "jrnl"
version = "0.4.3"
authors = ["Enrico Lefass <enrico.lefass@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"

[profile.release]
debug = 0
lto = true
opt-level = 3
strip = "debuginfo"
